Fix dirty reflows of bullets to deal with an empty first line (whitespace followed by block) in the parent block.  Bug 206602, r+sr=dbaron